# Book_TemplateTechnique

./: .gitignore  CMakeLists.txt  README.md
ch1/: CMakeLists.txt  macro_max.hpp  main_macro_max.cpp  main_smalltalk.cpp  smalltalk.hpp
ch10/: CMakeLists.txt  main_type_conversion_operator.cpp  type_conversion_operator.hpp
ch11/: CMakeLists.txt  expression_template.hpp  main_expression_template.cpp
ch2/: CMakeLists.txt  ctor_template.hpp  how_to_use_typename.hpp  main_ctor_template.cpp  main_how_to_use_typename.cpp  main_pointer_params.cpp  main_specialization.cpp  main_stack.cpp  main_template_template_params.cpp  main_valiadic_template_params.cpp  pointer_params_of_template.hpp  specialization.hpp  template_stack.cpp  template_stack.hpp  template_template_params.hpp  valiadic_template_params.hpp
ch3/: CMakeLists.txt  functor.hpp  generic_program.hpp  helper_func_for_predict.hpp  iterator_func.hpp  main_functor.cpp  main_generic_program.cpp  main_helper_func_for_predict.cpp  main_iterator_func.cpp  main_params_extension.cpp  main_tag_dispatch.cpp  params_extension.hpp  tag_dispatch.hpp
ch4/: CMakeLists.txt  compile_if.hpp  main_compile_if.cpp  main_meta_func.cpp  main_meta_func2.cpp  main_type_list.cpp  meta_func.hpp  meta_func2.hpp  type_list.hpp
ch5/: CMakeLists.txt  enable_if.hpp  main_enable_if.cpp  main_optimize_by_sfinae.cpp  main_sfinae1.cpp  main_sfinae2.cpp  optimize_by_sfinae.hpp  sfinae1.hpp  sfinae2.hpp
ch6/: CMakeLists.txt  main_named_policy.cpp  main_policy1.cpp  main_std_named_policy.cpp  named_policy.hpp  policy1.hpp  std_named_policy.hpp
ch7/: CMakeLists.txt  concept.hpp  concept_overload.hpp  main_concept.cpp  main_concept_overload.cpp  main_specialize_template_by_concept.cpp  specialize_template_by_concept.hpp
ch8/: CMakeLists.txt  main_non_template_base_and_template_derived.cpp  main_type_erasure_any.cpp  main_type_erasure_functional.cpp  main_type_erasure_virtual_table.cpp  main_type_erasure_void_pointer.cpp  non_template_base_and_template_derived.hpp  type_erasure_any.hpp  type_erasure_functional.hpp  type_erasure_virtual_table.hpp  type_erasure_void_pointer.hpp
ch9/: CMakeLists.txt  barton_nackman_trick.hpp  basic_crtp.hpp  enable_shared_from_this.hpp  main_barton_nackman_trick.cpp  main_basic_crtp.cpp  main_enable_shared_from_this.cpp
